# rpwlauncher

./: .gitignore  CLAUDE.md  Cargo.toml  commit_msg.txt  dl_python.py  erosion_terrace.py  extract_jar.py  index.html  package-lock.json  package.json  patch_class.py  release.ps1  repack.py  search_jars.ps1  search_jars.py  объект  папка
.claude/: settings.local.json
.explyt/agents/: 123.md
.firebender/plans/: rpw_launcher_features_5fcdf450.plan.md  rpw_minecraft_launcher_0d04de0e.plan.md
.github/workflows/: build.yml
engine-patches/: EXTREME_ROADMAP.md  FIX_FORWARD_RULE.txt  README.md  ROADMAP.md
engine-patches/patches/01-paletted-container/: PalettedContainer.java
engine-patches/patches/02-empty-section/: LevelChunkSection.java
engine-patches/patches/03-registry-lifecycles/: MappedRegistry.java
engine-patches/patches/04-blockstate-pruning/: BlockBehaviour.java
engine-patches/patches/10-texture-atlas-async/: TextureAtlas.java
engine-patches/patches/11-resource-parallel/: SimpleReloadInstance.java
engine-patches/patches/13-chunk-parallel/: ChunkMap.java
engine-patches/patches/14-region-async/: RegionFile.java
engine-patches/patches/15-lightlayer-singleton/: DataLayer.java
engine-patches/patches/extreme-01-modelcache/: ModelBakeryExtreme.java
engine-patches/patches/extreme-02-model-preload/: ModelBakery.java
engine-patches/patches/extreme-02-texture-preload/: TextureAtlasSprite.java
engine-patches/patches/extreme-03-preload-all/: ClientResourcesDownloaded.java
engine-patches/patches/extreme-04-shader-precompile/: ShaderExtremePrecompiler.java  ShaderPrecompiler.java
engine-patches/patches/extreme-05-direct-memory/: DirectTextureUpload.java
engine-patches/patches/extreme-06-zgc-launch/: LaunchOptimizer.java  ZGCForcer.java
engine-patches/patches/extreme-07-preload-main-menu/: Minecraft.java  MinecraftExtremeOptimizer.java
engine-patches/patches/extreme-08-direct-allocation/: DirectMemoryAccess.java
engine-patches/patches/extreme-09-force-preload/: MinecraftExtreme.java
engine-patches/patches/extreme-10-parallel-mods/: ModLauncherExtreme.java
engine-patches/patches/extreme-11-preload-all/: MinecraftExtremeOptimizer.java
engine-patches/patches/extreme-20-bypass-forge/: ForgeLoaderExtreme.java
engine-patches/scripts/: _paths.ps1  apply.ps1  build.ps1  deploy.ps1  launch.ps1  make-shortcut.ps1  restore.ps1  verify.ps1
public/auth/: offline_accounts.rpwenc
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: lib.rs  main.rs  token.rs
src-tauri/src/commands/: auth.rs  builds.rs  downloader.rs  java.rs  launcher.rs  logger.rs  mod.rs  settings.rs  updater.rs  versions.rs
src/components/: AdminPanel.tsx  AuthPanel.tsx  CustomModpackPanel.tsx  GamePanel.tsx  ModpackSettingsPanel.tsx  ParticlesBg.tsx  SettingsPanel.tsx  Sidebar.tsx  Titlebar.tsx  UpdateOverlay.tsx
src/styles/: globals.css
stub/: Cargo.toml  index.html  package-lock.json  package.json
stub-rs/: Cargo.toml  build.rs
stub-rs/src/: main.rs
stub/frontend/: index.html
stub/src/: main.rs
stub/src-tauri/: Cargo.toml  tauri.conf.json
stub/src-tauri/capabilities/: default.json
stub/src-tauri/src/: lib.rs  main.rs
