[package]
name = "rpw-launcher"
version = "2.1.0"
description = "RPWorld Minecraft Launcher"
authors = ["Sadoul"]
edition = "2021"

[lib]
name = "rpw_launcher_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
zip = "2"
sha1 = "0.10"
hex = "0.4"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
open = "5"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
lto = "thin"
codegen-units = 4
strip = "symbols"

