[package]
name = "rpw-launcher"
version = "2.30.0"
description = "RPWorld Minecraft Launcher"
authors = ["Sadoul"]
edition = "2021"

[lib]
name = "rpw_launcher_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
zip = "2"
sha1 = "0.10"
hex = "0.4"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
open = "5"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_UI_Controls", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_Security"] }
raw-window-handle = "0.6"

[profile.release]
opt-level = 1        # уровень 1 компилируется втрое быстрее чем 3, разница в скорости exe незаметна
lto = false          # thin LTO экономит 5% размера, но добавляет 2+ минуты компиляции
codegen-units = 16   # максимальная параллельность компилятора (было 4)
strip = "symbols"    # убираем debug-символы из бинаря

