[package]
name = "rpw-stub"
version = "2.1.0"
edition = "2021"
description = "RPWorld Launcher Stub — checks install and launches or downloads the launcher"

[[bin]]
name = "RPWorld-Launcher"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[profile.release]
opt-level = 1
lto = false
codegen-units = 16
strip = "symbols"
