[package]
name = "rpw-stub"
version = "1.0.7"
edition = "2021"
description = "RPWorld Launcher Installer"

[[bin]]
name = "rpw-stub"
path = "src/main.rs"

[lib]
name = "rpw_stub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
dirs = "5"
tauri-plugin-shell = "2"
winreg = "0.52"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
